# memwalk

./: .gitignore  README.md  pyproject.toml
memwalk/: __init__.py  cache.py  cli.py  config.py  corpus.py  engine.py  gpu.py  ingest.py  mcp_server.py  snapshot.py
memwalk/sources/: __init__.py  bash.py  git.py
