[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "memwalk"
version     = "0.4.3"
description = "Ask AI about any codebase — local, cached, SSM-state-backed exploration via memba + Nemotron"
readme      = "README.md"
license     = { text = "MIT" }
requires-python = ">=3.10"

keywords = ["llm", "ssm", "mamba", "nemotron", "memba", "code-search", "mcp", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]

dependencies = [
    # memba is not on PyPI yet — install from github.
    # When memba ships to PyPI this becomes `memba>=0.2.0` and memwalk
    # can itself be published.
    "memba @ git+https://github.com/emil28092005/Memba.git@main",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "mcp>=1.0.0",
    "tomli>=2.0;python_version<'3.11'",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff", "mypy"]

[project.scripts]
memwalk = "memwalk.cli:main"

[project.urls]
Homepage   = "https://github.com/emil28092005/memwalk"
Repository = "https://github.com/emil28092005/memwalk"

[tool.setuptools.packages.find]
include = ["memwalk*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
